# transFAIR

./: .envrc  .gitignore  BBMRI_sample_type_to_SNOMED_concept_map.json  BBMRI_sample_type_to_snomed_concept_map.json  CHANGELOG.md  Cargo.toml  Dockerfile  DockerfileBlazectl  README.md  README.org  Routine-Connector.org  SNOMED_to_BBMRI_sample_type_concept_map.json  a.json  build.rs  deny.toml  docker-compose.yml  example-concept.json  example-dotenv.md  flake.nix  launch.sh  pom.xml  result
.cargo/: config.toml
.github/workflows/: build.yml  codeql.yml  rust.yml  rust_security.yml
.sqlx/: query-11248c2b310423843642a4e09bd29a49b982a591b7c6f91936ce6c671babd98b.json  query-1f37c9494de9627bfc759c9b7453d67e57e1cd3ac021fa000fd84a9d11688c24.json  query-2fe5f2d43979b0feb1eeb83d7a31ec30f125caf2d5d50fa764cca6077d39c8c7.json  query-33a1cd1d3463e0e0e84866fd3eb49c83a8460b702c61a327fb0c1240c270039a.json  query-3fc3d0fd8268de207225c45b0562584d5b087f5308481e10f8a4ed8fec681333.json  query-536758f9f7b207c7e04744eea00501feea80e0bd4728040bcf54d0445afca0f7.json  query-70fc84c9208563c532b032048240bfe02de625e86432b89f3ef93a3244e7ba07.json  query-79d30ab36f11254a55133270b7bb4f6aa65b3d3b41be30b80d8a714f7eafafd6.json  query-80216c45b008cb5ea95ec0660175f3d9770ec984c8bd254cda33a66e41cf3eb2.json  query-888dcc41f8df82f4f948662c8fd1cfb89468090723da5f731884acad18b51887.json  query-9e4a0286cab5539f4e9055974c8b5a9b56c1c1543b637490c772540b7794b6f9.json  query-9ec29c86fd2771da65fffe3a680e0aed738fd21331dc86dc3959ffeca60296d7.json  query-ac2b452b1a538f4c11295329a30efae5d89ee09e622312ef58ff277637306841.json  query-b327834eb594bbf17f0a4f0a5ee7daac54f07800bab8be80a09175fe7ea2a51a.json  query-c98b1a5784b4247776305ac156e586adf9cb30bff42e88d03e497ce249761a4c.json  query-e2bff7bf189a92fb4dcf48e28dcee7319ad21175a2b011d0aa3fa40160a90a57.json  query-e643e3de461a0122755ad08cab4250e3067d0fd008a4c9af2ac80d7e839123cf.json  query-fc1b6fe25afc1643b4fb689b7729c71476cd8a4b0bc8cb395ebe9bf2ebbd2bcb.json
configs/mainzelliste/: mainzelliste.conf
dev/: test
docs/: Beispiel Routinedaten importieren.org  Referenzimplementierung Transferstelle.org  Testlauf der Schnittstellen.org
docs/api/: check-for-requests.sh  get_data_request.sh  get_data_requests.sh  post_data_request.sh  provide-data-for-request.sh  test-fhir.sh
docs/examples/: data_request.json  data_request_without_consent.json  diz_mdat.json  example_input_data.json
migrations/: 20240614130457_init.down.sql  20240614130457_init.up.sql
nix/: flake.nix  rust-toolchain.toml
src/: banner.rs  config.rs  fhir.rs  main.rs  mainzelliste.rs  requests.rs  ttp.rs
src/data_access/: data_requests.rs  mod.rs  models.rs
src/extensions/: mod.rs  option_str_ext.rs  str_ext.rs
src/main/java/de/samply/transfair/: BatchConfiguration.java  FhirProperties.java  PseudonymisationProperties.java  TransFairApplication.java
src/main/java/de/samply/transfyr/: BatchConfiguration.java  FhirProperties.java  TransfyrApplication.java
src/main/resources/: application.yml  input.csv
src/test/java/de/samply/transfair/: TransFairApplicationTests.java
src/ttp/: greifswald.rs  mainzelliste.rs
(+132 files in other folders)
