[package]
name = "wip-routine-connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
chrono = { version = "0.4.37", default-features = false, features = ["serde", "now"] }
clap = { version = "4.5.3", features = ["env", "derive"] }
fhir-sdk = { version = "0.11.0", default-features = false, features = ["builders", "client", "docs", "r4b"] }
once_cell = "1.19.0"
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite", "uuid"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }

[build-dependencies]
build-data = "0.1.5"
