[package]
name = "transfair"
version = "1.0.0"
edition = "2024"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = "0.8.1"
chrono = { version = "0.4.37", default-features = false, features = ["serde", "now"] }
clap = { version = "4.5.3", features = ["env", "derive"] }
fhir-sdk = { version = "0.14.1", default-features = false, features = ["builders", "r4b"] }
futures-util = { version = "0.3", default-features = false }
once_cell = "1.19.0"
reqwest = { version = "0.12.2", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "uuid"] }
thiserror = "2"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.12", features = ["v4", "serde"] }

[build-dependencies]
build-data = "0.3.3"

[dev-dependencies]
pretty_assertions = "1.4.1"
